# messages

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  generate-all.sh  generate-common.py  generate-fednow.sh  generate-iso20022.sh  generate.sh  release.toml
.github/workflows/: crate-publish.yml
examples/: convert-fednow.rs  convert-iso20022.rs  convert.rs  validate.rs
fednow/: Cargo.toml
fednow/examples/: convert-fednow.rs  convert.rs  simple-fednow.rs  validate.rs
fednow/src/: common.rs  document.rs  fednow_incoming_external.rs  fednow_outgoing_external.rs  lib.rs  validationerror.rs
fednow/src/fednow/: key_exchange.rs  participant_file.rs
fednow/src/fednow_extra/: key_exchange.rs  participant_file.rs
fednow/src/iso/: admi_002_001_01.rs  admi_004_001_02.rs  admi_006_001_01.rs  admi_007_001_01.rs  admi_011_001_01.rs  admi_998_001_02.rs  camt_026_001_07.rs  camt_028_001_09.rs  camt_029_001_09.rs  camt_052_001_08.rs  camt_054_001_08.rs  camt_055_001_09.rs  camt_056_001_08.rs  camt_060_001_05.rs  head_001_001_02.rs  mod.rs  pacs_002_001_10.rs  pacs_004_001_10.rs  pacs_008_001_08.rs  pacs_009_001_08.rs  pacs_028_001_03.rs  pain_013_001_07.rs  pain_014_001_07.rs
iso20022/: Cargo.toml
iso20022-acmt/: Cargo.toml
iso20022-acmt/src/: acmt_001_001_08.rs  acmt_002_001_08.rs  acmt_003_001_08.rs  acmt_005_001_06.rs  acmt_006_001_07.rs  acmt_007_001_05.rs  acmt_008_001_05.rs  acmt_009_001_04.rs  acmt_010_001_04.rs  acmt_011_001_04.rs  acmt_012_001_04.rs  acmt_013_001_04.rs  acmt_014_001_05.rs  acmt_015_001_04.rs  acmt_016_001_04.rs  acmt_017_001_04.rs  acmt_018_001_04.rs  acmt_019_001_04.rs  acmt_020_001_04.rs  acmt_021_001_04.rs  acmt_022_001_04.rs  acmt_023_001_04.rs  acmt_024_001_04.rs  acmt_027_001_05.rs  acmt_028_001_05.rs  acmt_029_001_05.rs  acmt_030_001_04.rs  acmt_031_001_05.rs  acmt_032_001_05.rs  acmt_033_001_02.rs  acmt_034_001_05.rs  acmt_035_001_02.rs  acmt_036_001_01.rs  acmt_037_001_02.rs  common.rs  lib.rs
iso20022-admi/: Cargo.toml
iso20022-admi/src/: admi_002_001_01.rs  admi_004_001_02.rs  admi_005_001_02.rs  admi_006_001_01.rs  admi_007_001_01.rs  admi_009_001_02.rs  admi_010_001_02.rs  admi_011_001_01.rs  admi_017_001_02.rs  admi_024_001_01.rs  common.rs  lib.rs
iso20022-auth/: Cargo.toml
iso20022-auth/src/: auth_001_001_02.rs  auth_002_001_02.rs  auth_003_001_01.rs  auth_012_001_02.rs  auth_013_001_02.rs  auth_014_001_02.rs  auth_015_001_02.rs  auth_016_001_03.rs  auth_017_001_02.rs  auth_018_001_04.rs  auth_019_001_04.rs  auth_020_001_04.rs  auth_021_001_04.rs  auth_022_001_04.rs  auth_023_001_04.rs  auth_024_001_04.rs  auth_025_001_04.rs  auth_026_001_04.rs  auth_027_001_04.rs  auth_028_001_01.rs  auth_029_001_05.rs  auth_030_001_04.rs  auth_031_001_01.rs  auth_032_001_01.rs  auth_033_001_03.rs  auth_034_001_01.rs  auth_035_001_01.rs  auth_036_001_03.rs  auth_038_001_01.rs  auth_039_001_01.rs  auth_040_001_01.rs  auth_041_001_01.rs  auth_042_001_02.rs  auth_043_001_01.rs  auth_044_001_02.rs  auth_045_001_03.rs  auth_047_001_01.rs  auth_048_001_01.rs  auth_049_001_02.rs  auth_050_001_01.rs  (+46 more)
iso20022-camt/: Cargo.toml
iso20022-camt/src/: camt_003_001_08.rs  camt_004_001_10.rs  camt_005_001_11.rs  camt_006_001_11.rs  camt_007_001_10.rs  camt_008_001_11.rs  camt_009_001_08.rs  camt_010_001_09.rs  camt_011_001_08.rs  camt_012_001_08.rs  camt_013_001_04.rs  camt_014_001_05.rs  camt_015_001_04.rs  camt_016_001_04.rs  camt_017_001_05.rs  camt_018_001_05.rs  camt_019_001_07.rs  camt_020_001_04.rs  camt_021_001_06.rs  camt_023_001_07.rs  camt_024_001_08.rs  camt_025_001_08.rs  camt_026_001_10.rs  camt_027_001_10.rs  camt_028_001_12.rs  camt_029_001_13.rs  camt_030_001_06.rs  camt_031_001_07.rs  camt_032_001_05.rs  camt_033_001_07.rs  camt_034_001_07.rs  camt_035_001_06.rs  camt_036_001_06.rs  camt_037_001_10.rs  camt_038_001_05.rs  camt_039_001_06.rs  camt_040_001_04.rs  camt_041_001_04.rs  camt_042_001_04.rs  camt_043_001_04.rs  (+54 more)
iso20022-head/: Cargo.toml
iso20022-head/src/: common.rs  head_001_001_02.rs  head_001_001_04.rs  head_002_001_01.rs  lib.rs  validationerror.rs
iso20022-pacs/: Cargo.toml
iso20022-pacs/src/: common.rs  lib.rs  pacs_002_001_12.rs  pacs_002_001_14.rs  pacs_003_001_11.rs  pacs_004_001_13.rs  pacs_007_001_13.rs  pacs_008_001_12.rs  pacs_009_001_11.rs  pacs_010_001_06.rs  pacs_028_001_06.rs  pacs_029_001_02.rs
iso20022-pain/: Cargo.toml
iso20022-pain/src/: common.rs  lib.rs  pain_001_001_12.rs  pain_002_001_14.rs  pain_007_001_12.rs  pain_008_001_11.rs  pain_009_001_08.rs  pain_010_001_08.rs  pain_011_001_08.rs  pain_012_001_08.rs  pain_013_001_11.rs  pain_014_001_11.rs  pain_017_001_04.rs  pain_018_001_04.rs
iso20022-reda/: Cargo.toml
iso20022-reda/src/: common.rs  lib.rs  reda_001_001_04.rs  reda_002_001_04.rs  reda_004_001_07.rs  reda_005_001_03.rs  reda_006_001_01.rs  reda_007_001_01.rs  reda_008_001_01.rs  reda_009_001_01.rs  reda_010_001_01.rs  reda_012_001_01.rs  reda_013_001_01.rs  reda_014_001_02.rs  reda_015_001_01.rs  reda_016_001_01.rs  reda_017_001_02.rs  reda_018_001_01.rs  reda_019_001_01.rs  reda_020_001_01.rs  reda_021_001_01.rs  reda_022_001_02.rs  reda_023_001_01.rs  reda_029_001_01.rs  reda_030_001_01.rs  reda_031_001_01.rs  reda_032_001_01.rs  reda_033_001_01.rs  reda_034_001_01.rs  reda_035_001_01.rs  reda_036_001_01.rs  reda_037_001_01.rs  reda_041_001_02.rs  reda_042_001_01.rs  reda_043_001_02.rs  reda_056_001_01.rs  reda_057_001_01.rs  reda_058_001_01.rs  reda_059_001_01.rs  reda_060_001_02.rs  (+11 more)
iso20022-remt/: Cargo.toml
iso20022-remt/src/: common.rs  lib.rs  remt_001_001_06.rs  remt_002_001_03.rs
iso20022/examples/: convert-iso20022.rs  convert.rs  pacs008-config.json  pacs008-samplegen.rs  simple-iso20022.rs
iso20022/src/: common.rs  document.rs  lib.rs
open-payments-common/: Cargo.toml
open-payments-common/src/: lib.rs
src/: lib.rs  main.rs
src/message/: mod.rs
src/message/fednow/: document.rs  fednow_incoming_external.rs  fednow_outgoing_external.rs  mod.rs
src/message/iso20022/: document.rs  mod.rs
tests/: main.rs
(+196 files in other folders)
