[package]
name = "open-payments-iso20022-admi"
version = "1.0.5"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Message Parsing Library - ISO20022 ADMI"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/messages"
repository = "https://github.com/Open-Payments/messages"
keywords = ["financial", "payments", "message", "iso20022"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]

[dependencies]
open-payments-common = {path = "../open-payments-common", version = "1.0.5"}
serde = { version = "1.0", features = ["derive"], optional = true }
serde-xml-rs = { version = "0.6.0" }
serde_path_to_error = { version = "0.1" }
xml-rs = { version = "0.8" }
serde_json = { version = "1.0" }
regex = "1.11.0"

[features]
default = []
derive_all = ["derive_serde", "derive_debug", "derive_default", "derive_partial_eq", "derive_clone"]
derive_serde = ["serde"]
derive_debug = []
derive_default = []
derive_partial_eq = []
derive_clone = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
