[package]
name = "open-payments-iso20022-head"
version = "0.2.7"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Message Parsing Library - ISO20022 HEAD"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/messages"
repository = "https://github.com/Open-Payments/messages"
keywords = ["financial", "payments", "message", "iso20022"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_path_to_error = "0.1"
xml-rs = "0.8"
serde_json = "1.0"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
