[package]
name = "open-payments-iso20022"
version = "0.2.11"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Message Parsing Library - ISO20022"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/messages"
repository = "https://github.com/Open-Payments/messages"
keywords = ["financial", "payments", "message", "iso20022"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]


[dependencies]
open-payments-iso20022-acmt = {path = "../iso20022-acmt", version = "0.2.11", optional = true}
open-payments-iso20022-admi = {path = "../iso20022-admi", version = "0.2.11", optional = true}
open-payments-iso20022-auth = {path = "../iso20022-auth", version = "0.2.11", optional = true}
open-payments-iso20022-camt = {path = "../iso20022-camt", version = "0.2.11", optional = true}
open-payments-iso20022-head = {path = "../iso20022-head", version = "0.2.11", optional = true}
open-payments-iso20022-pacs = {path = "../iso20022-pacs", version = "0.2.11", optional = true}
open-payments-iso20022-pain = {path = "../iso20022-pain", version = "0.2.11", optional = true}
open-payments-iso20022-reda = {path = "../iso20022-reda", version = "0.2.11", optional = true}
open-payments-iso20022-remt = {path = "../iso20022-remt", version = "0.2.11", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_path_to_error = "0.1"
xml-rs = "0.8"
serde_json = "1.0"
regex = "1.11.0"


[features]
default = ["head"]
iso20022 = ["payments"]
payments = ["acmt", "admi", "auth", "camt", "head", "pacs", "pain", "reda", "remt"]
acmt = ["open-payments-iso20022-acmt"]
admi = ["open-payments-iso20022-admi"]
auth = ["open-payments-iso20022-auth"]
camt = ["open-payments-iso20022-camt"]
head = ["open-payments-iso20022-head"]
pacs = ["open-payments-iso20022-pacs"]
pain = ["open-payments-iso20022-pain"]
reda = ["open-payments-iso20022-reda"]
remt = ["open-payments-iso20022-remt"]


[package.metadata.docs.rs]
features = ["iso20022"]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
