[package]
name = "open-payments-common"
version = "1.0.9"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Message Parsing Library - ISO20022"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/messages"
repository = "https://github.com/Open-Payments/messages"
keywords = ["financial", "payments", "message", "iso20022"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
regex = "1.11.1"
rand = "0.8"

[features]
default = []
derive_all = ["derive_serde", "derive_debug", "derive_default", "derive_partial_eq", "derive_clone"]
derive_serde = ["serde"]
derive_debug = []
derive_default = []
derive_partial_eq = []
derive_clone = []
